8.3.3/components/footnote.mdx
---
description: Компонент для отображения подписей и вспомогательного текста — подсказок, пояснений к форме, мелких аннотаций под основным контентом.
tags: caption, secondary
---

<Overview group="typography" forcedPath="components/Typography/Footnote/Footnote.tsx">

# Footnote [tag:component]

Компонент для отображения подписей и вспомогательного текста — подсказок, пояснений к форме,
мелких аннотаций под основным контентом.

</Overview>

{/* @example-description: Базовое использование компонента `Footnote`. */}
<Playground>
  ```jsx
  <Flex direction="column">
    <Footnote>Дополнительная подпись к элементу</Footnote>
    <Footnote caps>Подпись в верхнем регистре</Footnote>
  </Flex>
  ```
</Playground>

## Свойства и методы [#api]

| Свойство | Тип | По умолчанию | Описание |
| --- | --- | --- | --- |
| `align` | `"start" \| "center" \| "end"` | `-` | Выравнивание текста. Не имеет эффекта при inline={true}. |
| `caps` | `boolean` | `-` | Отображение текста в верхнем регистре. |
| `Component` | `ElementType<any, keyof IntrinsicElements>` | `span` |  |
| `getRootRef` | `Ref<HTMLElement>` | `-` |  |
| `inline` | `boolean` | `false` | Делает блок инлайновым. |
| `normalize` | `boolean` | `true` | Убирает внешние отступы. |
| `useAccentWeight` | `boolean` | `-` | Включает акцентный тип начертания шрифта. Используются токены fontWeightAccent[1, 2, 3] Используется только вместе с `weight`. |
| `weight` | `"1" \| "2" \| "3"` | `-` | Задаёт начертание шрифта, отличное от стандартного. |

